// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`merge two sorted lists run 1`] = `
ListNode {
  "next": ListNode {
    "next": null,
    "val": 2,
  },
  "val": 1,
}
`;

exports[`merge two sorted lists run 2`] = `
ListNode {
  "next": ListNode {
    "next": ListNode {
      "next": ListNode {
        "next": ListNode {
          "next": ListNode {
            "next": null,
            "val": 4,
          },
          "val": 4,
        },
        "val": 3,
      },
      "val": 2,
    },
    "val": 1,
  },
  "val": 1,
}
`;
